--- a/stk/CMakeLists.txt
+++ b/stk/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(stk INTERFACE)
 target_include_directories(stk INTERFACE include/)
-target_link_libraries(stk INTERFACE stdc++fs)
+if(!MSVC)
+    target_link_libraries(stk INTERFACE stdc++fs)
+endif()
