--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.13)
 
 project(stk)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-fconcepts -Wall -Werror")
+
+if(!MSVC)
+    set(CMAKE_CXX_FLAGS "-fconcepts -Wall -Werror")
+endif()
 
 add_subdirectory(stk)
 
