--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,8 @@
 add_example(convex_hull_demo)
 add_example(lu_dcmp)
-add_example(knapsack)
 add_example(valmat)
+
+if(!MSVC)
+    # because the example uses getopt
+    add_example(knapsack)
+endif()
