Binary-Tree traversal

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,4 +3,5 @@ add_example(graph_adjacency)
 add_example(graph_search)
 add_example(lu_dcmp)
 add_example(knapsack)
+add_example(tree_traversal)
 add_example(valmat)
