--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.18)
 
 project(stk)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-fconcepts -Wall -Werror")
+set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -Wsign-conversion")
 
 add_subdirectory(stk)
 
@@ -13,14 +13,7 @@ function(add_example name)
     target_link_libraries(${name} stk)
 endfunction(add_example)
 
-add_subdirectory(examples)
-
-#set(ENABLE_TESTS false CACHE BOOL "Enable unittests")
-
-#if(ENABLE_TESTS)
-#    enable_testing()
-#    add_subdirectory(test)
-#endif(ENABLE_TESTS)
+#add_subdirectory(examples)
 
 include(CTest)
 
