--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required(VERSION 3.18)
-
+cmake_minimum_required(VERSION 3.22)
 project(stk)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -8,16 +7,18 @@ set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -Wsign-conversion")
 
 add_subdirectory(stk)
 
-function(add_example name)
-    add_executable(${name} ${name}.cpp)
-    target_link_libraries(${name} stk)
-endfunction(add_example)
+# function(add_example name)
+#     add_executable(${name} ${name}.cpp)
+#     target_link_libraries(${name} stk)
+# endfunction(add_example)
 
 #add_subdirectory(examples)
+
+add_subdirectory(cmake)
 
 include(CTest)
 
 if(BUILD_TESTING)
-    add_subdirectory(test)
     enable_testing()
+    add_subdirectory(test)
 endif(BUILD_TESTING)
